<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="media"
            type="br.com.katalog.katalogweb.models.DigitalMedia"/>
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp"
            tools:context=".activities.DigiMediaRegisterActivity">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/media_type"
                android:textAppearance="?android:textAppearanceSmall"/>
            <RadioGroup
                android:id="@+id/rgMediaType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rbBluray"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bluray"/>
                <RadioButton
                    android:id="@+id/rbDVD"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dvd"/>

            </RadioGroup>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <EditText
                    android:id="@+id/edtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:text="@={media.title}"
                    android:inputType="textPersonName|textCapWords"
                    android:imeOptions="actionNext"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <AutoCompleteTextView
                    android:id="@+id/actCompany"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/company"
                    android:inputType="textPersonName|textCapWords"
                    android:imeOptions="actionNext"
                    android:text="@={media.company}"/>

            </android.support.design.widget.TextInputLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/select_case_type"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:id="@+id/spinner" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_save"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:letterSpacing="0.2"
                android:textSize="18sp"
                android:textStyle="bold"
                android:onClick="clickSave" />

        </LinearLayout>
    </ScrollView>

</layout>
